# emush_rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.app  Dockerfile.grafana  Makefile  README.md  clone-and-install  compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: continuous_integration.yaml  deploy_api.yaml
chroma/9e357e34-e7cc-4ba0-82a3-6318319f711d/: index_metadata.pickle
data/: peanutz_posts.json  wikis.json
emush_rag/: __init__.py  config.py  main.py  prompts.py
emush_rag/adapters/: chroma_vector_store.py  file_system_json_document_reader.py  in_memory_rate_limiter.py  langchain_recursive_character_document_splitter.py  openai_llm_client.py
emush_rag/api/: dependencies.py  main.py  middleware.py  models.py  observability.py
emush_rag/cli/: index_documents.py
emush_rag/models/: document.py
emush_rag/ports/: document_reader.py  document_splitter.py  llm_client.py  rate_limiter.py  vector_store.py
emush_rag/usecases/: answer_user_question.py  index_documents.py
grafana/: Dockerfile
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/json/: emush-rag-api-monitoring.json
grafana/provisioning/datasources/: jaegar.yml
tests/: test_main.py
tests/e2e/: test_main.py
tests/e2e/api/: test_main.py
tests/e2e/cli/: test_index_documents.py
tests/integration/adapters/: test_chroma_vector_store.py  test_file_system_json_document_reader.py  test_openai_llm_client.py
tests/integration/adapters/data/: data.json  data_2.json
tests/test_doubles/: __init__.py  fake_datetime.py  test_doubles.py
tests/unit/adapters/: test_chroma_vector_store.py  test_openai_llm_client.py
tests/unit/usecases/: test_answer_user_question.py  test_index_documents.py
