[project]
name = "emush-rag"
version = "1.7.0"
description = "A RAG-based API to answer questions about eMush."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi[standard]>=0.116.1",
    "chromadb>=1.0.15",
    "openai>=1.97.1",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-instrumentation-openai>=0.43.1",
    "opentelemetry-exporter-otlp>=1.35.0",
    "langchain-text-splitters>=0.3.9",
]

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/emush_rag/issues"
Changelog = "https://github.com/cmnemoi/emush_rag/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/emush_rag/"
Repository = "https://github.com/cmnemoi/emush_rag/"

[project.scripts]
index-documents = "emush_rag.cli.index_documents:main"

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=10.2.0",
    "typer>=0.16.0",
]
lint = [
    "mypy>=1.17.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.12.5",
    "types-tqdm>=4.67.0.20250516",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emush_rag"]
