[project]
name = "emush-rag"
version = "1.8.0"
description = "A RAG-based API to answer questions about eMush."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi[standard]>=0.121.3",
    "chromadb>=1.3.5",
    "openai>=2.8.1",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-instrumentation-openai>=0.48.1",
    "opentelemetry-exporter-otlp>=1.38.0",
    "langchain-text-splitters>=1.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/emush_rag/issues"
Changelog = "https://github.com/cmnemoi/emush_rag/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/emush_rag/"
Repository = "https://github.com/cmnemoi/emush_rag/"

[project.scripts]
index-documents = "emush_rag.cli.index_documents:main"

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=10.5.2",
    "typer>=0.20.0",
]
lint = [
    "mypy>=1.18.2",
    "pytest-mypy>=1.0.1",
    "ruff>=0.14.5",
    "types-tqdm>=4.67.0.20250809",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emush_rag"]
