[project]
name = "emush-rag"
version = "1.8.2"
description = "A RAG-based API to answer questions about eMush."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi[standard]>=0.135.0",
    "chromadb>=1.5.2",
    "openai>=2.24.0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-instrumentation-openai>=0.52.6",
    "opentelemetry-exporter-otlp>=1.39.1",
    "langchain-text-splitters>=1.1.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/emush_rag/issues"
Changelog = "https://github.com/cmnemoi/emush_rag/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/emush_rag/"
Repository = "https://github.com/cmnemoi/emush_rag/"

[project.scripts]
index-documents = "emush_rag.cli.index_documents:main"

[dependency-groups]
dev = [
    "pytest-watcher>=0.6.3",
    "python-semantic-release>=10.5.3",
    "typer>=0.23,<0.24",
]
lint = [
    "mypy>=1.19.1",
    "pytest-mypy>=1.0.1",
    "ruff>=0.15.4",
    "types-tqdm>=4.67.3.20260205",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emush_rag"]
